# ESurfingClient-CVersion

./: README.md  Windows&Linux.md
.github/workflows/: build-aarch64-linux.yml  build-all-platforms.yml
esurfing/: CMakeLists.txt
esurfing/src/: ConfigParser.c  DialerApp.c  MultiDialer.c  NetClient.c  Options.c
esurfing/src/headFiles/: ConfigParser.h  MultiDialer.h  NetClient.h  Options.h
esurfing/src/headFiles/utils/: PlatformUtils.h
esurfing/src/utils/: PlatformUtils.c
